--- a/index.html
+++ b/index.html
@@ -13,7 +13,26 @@
             <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
         <section id="redes-sociais">
-            
+            <nav>
+                <a href="home.html" target="tela">
+                    <img src="imagens/logo-home.jpg" alt="">
+                </a>
+                <a href="youtube.html" target="tela">
+                    <img src="imagens/logo-youtube.jpg" alt="">
+                </a>
+                <a href="github.html" target="tela">
+                    <img src="imagens/logo-github.jpg" alt="">
+                </a>
+                <a href="instagram.html" target="tela">
+                    <img src="imagens/logo-instagram.jpg" alt="">
+                </a>
+                <a href="twitter.html" target="tela">
+                    <img src="imagens/logo-twitter.jpg" alt="">
+                </a>
+                <a href="facebook.html" target="tela">
+                    <img src="imagens/logo-facebook.jpg" alt="">
+                </a>
+            </nav>
         </section>
     </main>
 </body>
