--- a/instagram.html
+++ b/instagram.html
@@ -12,11 +12,27 @@
         box-sizing: border-box;
     }
     body {
-        background: black url(imagens/tela-instagram.jpg) no-repeat top center;
-        background-size: cover;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    ::-webkit-scrollbar {
+        display: none;
+    }
+    img {
+        width: 100vw;
+    }
+    a {
+        display: block;
+        padding: 20px;
+        background-color: red;
+        color: white;
+        text-decoration: none;
+        text-align: center;
+        font-weight: bold;
+
     }
 </style>
 <body>
-    
+    <img src="imagens/tela-instagram.jpg" alt="Página do YouTube">
+    <a href="https://instagram.com" target="_blank">ACESSE</a>
 </body>
 </html>
