alteração formato da imagem

--- a/facebook.html
+++ b/facebook.html
@@ -32,7 +32,7 @@
     }
 </style>
 <body>
-    <img src="imagens/tela-facebook.png" alt="Página do YouTube">
+    <img src="imagens/tela-facebook.jpg" alt="Página do YouTube">
     <a href="https://facebook.com" target="_blank">ACESSE</a>
 </body>
 </html>
